--- a/public/go.html
+++ b/public/go.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0;url=https://webktaft.dev">
+  <meta http-equiv="refresh" content="0;url=https://webkraft.dev">
   <script>
-    window.location.href = "https://webktaft.dev";
+    window.location.href = "https://webkraft.dev";
   </script>
 </head>
 <body>
-  <p>If you are not redirected automatically, follow this <a href="https://webktaft.dev">link</a>.</p>
+  <p>If you are not redirected automatically, follow this <a href="https://webkraft.dev">link</a>.</p>
 </body>
 </html>
